<resources>
    <string name="app_name">DoNotRedeem</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="don_t_have_an_account_sign_up"><u>Don’t have an account? Sign Up</u></string>
    <string name="log_in">"Welcome to feelin' "</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="user_name_text">User Name</string>
    <string name="password_text">Password</string>
    <string name="log_in_text">Log In</string>
    <string name="or">OR</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="how_do_you_feel_today">HOW DO YOU FEEL TODAY ?</string>
    <string name="skip">Skip</string>
    <string name="next"><![CDATA[NEXT >]]></string>
    <string name="angry">Angry</string>
    <string name="confused">Confused</string>
    <string name="fear">Fear</string>
    <string name="disgusted">Disgusted</string>
    <string name="shameful">Shameful</string>
    <string name="sign_up_name">Name</string>
    <string name="sign_up_sign_up">SIGN UP</string>
    <string name="sign_up_done">DONE</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_username">Choose a username</string>
    <string name="sign_up_continue">Continue</string>
    <string name="sign_up_phone_number">Phone Number</string>
    <string name="sign_up_email">Email</string>
    <string name="mood_recur_how_often_would_you_like_to_reflect_on_your_mood">How often would you like to reflect on your mood?</string>
    <string name="when_is_your_birthday">When is your birthday?</string>
    <string name="dd_mm_yy">DD/MM/YY</string>
    <string name="what_helps_you_feel_better_when_you_are_down">What helps you feel better when you are down?</string>
    <string name="select_all_that_apply">Select all that apply</string>
    <string name="default_web_client_id">YOUR_WEB_CLIENT_ID</string>
    <string name="back_button">back_button</string>
    <string name="listen_to_music">Listen to music</string>
    <string name="dancing">Dancing</string>
    <string name="art_activities">Art activities</string>
    <string name="cookingactivities">Cookingactivities</string>
    <string name="travel_destinations">Travel destinations</string>
    <string name="relationships_and_connections">Relationships and connections</string>
    <string name="other_activities">Other activities</string>
    <string name="go_for_a_walk">Go for a walk</string>
    <string name="play_video_games">Play video games</string>
    <string name="play_sports">Play sports</string>
    <string name="add_reasoning">Add reasoning</string>
    <string name="add_mood">Add Mood</string>
    <string name="current_mood">Current Mood</string>
    <string name="add_description">Add Description</string>
    <string name="description">Description</string>
    <string name="add_media">Add Media</string>
    <string name="add_date">Add Date</string>
    <string name="add_location">Add location</string>
    <string name="add_social_situation">Add social situation</string>
    <string name="upload">Upload</string>
    <string name="alone">Alone</string>
    <string name="with_one_other_person">With one other person</string>
    <string name="with_2_7_person">With 2-7 person</string>
    <string name="crowd">Crowd</string>
    <string name="happy">Happy</string>
    <string name="happy_emoji">Happy Emoji</string>
    <string name="sad">Sad</string>
    <string name="DD_MM_YY">DD/MM/YY</string>
    <string name="use_current_date">Use current date</string>
    <string name="time">Time</string>
    <string name="use_current_time">Use current time</string>
    <string name="location">Location</string>
    <string name="use_current_location">Use current location</string>
    <string name="add_time">Add Time</string>
    <string name="is_this_mood_private">Is this mood private?</string>
    <string name="submit">Submit</string>
    <string name="surprised">Surprised</string>
    <string name="shy">Shy</string>
    <string name="tired">Tired</string>
    <string name="Emptydec">null</string>
    <string name="close_button_description">Close the dialog</string>
    <string name="select_image_source">Select Image Source</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="all_moods">ALL MOODS</string>
    <string name="filter_button">Filter button</string>
    <string name="backbutton">back_button</string>
    <string name="this_is_a_sample_comment_text_that_demonstrates_the_improved_styling_and_color_scheme_for_better_readability">This is a sample comment text that demonstrates the improved styling and color scheme for better readability.</string>
    <string name="author_name">Author Name</string>
    <string name="close">Close</string>
    <string name="edit_mood">Edit Mood</string>
    <string name="currentmood">Current Mood</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="username">USERNAME</string>
    <string name="username_small">Username</string>
    <string name="email">EMAIL</string>
    <string name="email_small">Email</string>
    <string name="password_caps">PASSWORD</string>
    <string name="dob">DOB</string>
    <string name="bio">BIO</string>
    <string name="contact">CONTACT</string>
    <string name="bio_small">Bio</string>
    <string name="contact_small">Contact</string>
    <string name="confirm">CONFIRM</string>
    <string name="delete">DELETE</string>
    <string name="search">Search...</string>
    <string name="about_us">ABOUT US</string>
    <string name="about_us_text">Working on the Mood Event app for our CMPUT 301 project was an exciting and unforgettable experience. We not only learned a lot about Android development but also had a great time experimenting with different features. There were moments when we’d randomly add moods just for fun, making testing an unexpectedly entertaining part of the process. Our meetings often stretched to 12 hours, filled with debugging, brainstorming, and plenty of laughter. Despite the long hours, this project was a rewarding journey that strengthened our teamwork and problem-solving skills.</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="add_a_comment">Add a comment...</string>
    <string name="submit_button">Submit Button</string>
    <string name="followers">Followers</string>
    <string name="mood_jar">Mood Jar</string>
    <string name="unlock_jar">Unlock Jar</string>
    <string name="add_positive_note">Add Positive Note</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="time_hist_content">12:09 AM</string>
    <string name="timehist_content">Time:</string>
    <string name="_12_09_2013">12/09/2013</string>
    <string name="date_hist_cont">Date:</string>
    <string name="desc_hist_cont">Optional Text Description Here</string>
    <string name="add_to_mood_jar">Add to Mood Jar</string>
    <string name="describes">describes</string>
    <string name="feelin">feelin\'</string>
    <string name="profile_picture">Profile picture</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="see_statistics">See statistics</string>
    <string name="open_mood_map">Open mood map</string>
    <string name="open_follow_requests">Open follow requests</string>
    <string name="open_profile_page">Open Profile Page</string>
    <string name="add_mood_event">Add mood event</string>
    <string name="optional_desc_here">Optional Desc here</string>
    <string name="_12_09">12:09</string>
    <string name="university">University</string>
    <string name="_12_09_23">12/09/23</string>
    <string name="edit">edit</string>
    <string name="mood_history">MOOD HISTORY</string>
    <string name="privacy_here">Privacy here</string>
    <string name="situation_here">Situation here</string>
    <string name="date_here">Date here</string>
    <string name="time_here">Time here</string>
    <string name="location_here">Location here</string>
    <string name="reason_here">Reason here</string>
    <string name="profile">Profile</string>
    <string name="moods">Moods</string>
    <string name="recents">Recents</string>
    <string name="almost_there">Almost there...</string>
    <string name="remindermood">Do you want reminders to log your mood?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="requests">REQUESTS</string>
    <string name="_0">0</string>
    <string name="bio_searched_user">Example Bio. Maximum of 50 characters</string>
    <string name="sign_out">Sign Out</string>
    <string name="moodjar">MoodJar</string>
    <string name="qr_code">QR Code</string>
    <string name="about_us_small">About Us</string>
    <string name="analytics">Analytics</string>
    <string name="history">History</string>
    <string name="phone_number">Phone number</string>
    <string name="calendar">calendar</string>
    <string-array name="mood_frequency_options">
        <item>Select frequency</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Only when I\'m feeling down</item>
    </string-array>
    <string-array name="mood_names">
        <item>Happy</item>
        <item>Sad</item>
        <item>Fear</item>
        <item>Angry</item>
        <item>Confused</item>
        <item>Disgusted</item>
        <item>Shameful</item>
        <item>Surprised</item>
        <item>Shy</item>
        <item>Tired</item>
    </string-array>
</resources>