<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#222121">

    <LinearLayout
        android:id="@+id/side_panel"
        android:layout_width="138dp"
        android:layout_height="895dp"
        android:background="#222121"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:fontFamily="@font/jomolhari"
            android:padding="16dp"
            android:text="@string/feelin"
            android:textColor="#F5E6D3"
            android:textSize="34sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/nav_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/history"
            android:textSize="17sp"
            android:layout_marginTop="20dp"
            android:textColor="#F5E6D3"
            android:padding="16dp" />

        <TextView
            android:id="@+id/nav_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#F5E6D3"
            android:textSize="17sp"
            android:text="@string/profile"
            android:padding="16dp" />

        <TextView
            android:id="@+id/nav_analytics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/analytics"
            android:textSize="17sp"
            android:textColor="#F5E6D3"
            android:padding="16dp" />


        <TextView
            android:id="@+id/nav_about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#F5E6D3"
            android:textSize="17sp"
            android:text="@string/about_us_small"
            android:padding="16dp" />

        <TextView
            android:id="@+id/nav_qr_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qr_code"
            android:textSize="17sp"
            android:textColor="#F5E6D3"
            android:padding="16dp" />

        <TextView
            android:id="@+id/nav_mood_jar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/moodjar"
            android:textSize="17sp"
            android:textColor="#F5E6D3"
            android:padding="16dp" />


        <TextView
            android:id="@+id/Sign_out"
            android:layout_width="match_parent"
            android:textColor="#F5E6D3"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:textSize="17sp"
            android:padding="16dp" />
    </LinearLayout>

    <ImageView
        tools:ignore="contentDescription"
        android:id="@+id/imageView5"
        android:layout_width="333dp"
        android:layout_height="365dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        app:layout_constraintStart_toEndOf="@+id/side_panel"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hapi" />

    <ImageView
        tools:ignore="contentDescription"
        android:id="@+id/imageView6"
        android:layout_width="333dp"
        android:layout_height="365dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="352dp"
        app:layout_constraintStart_toEndOf="@+id/side_panel"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/angry" />

    <ImageButton
        tools:ignore="contentDescription"
        android:id="@+id/imageButton"
        android:layout_width="50dp"
        android:layout_height="51dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#222121"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.917"
        app:layout_constraintStart_toEndOf="@+id/side_panel"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/close"
        app:tint="#F5E6D3" />

    <FrameLayout
        android:id="@+id/side_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>