<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222121"
    tools:context=".Activities.MainActivity">


    <View
        android:id="@+id/topBackgroundconfused"
        android:layout_width="412dp"
        android:layout_height="450dp"
        android:background="@drawable/rounded_top_bg_confused"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.55"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/main_message"
        android:layout_width="332dp"
        android:layout_height="169dp"
        android:fontFamily="@font/amatica_sc_bold"
        android:text="@string/how_do_you_feel_today"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76" />

    <Button
        android:id="@+id/skip_button"
        android:layout_width="98dp"
        android:layout_height="55dp"
        android:backgroundTint="#222121"
        android:fontFamily="@font/amatica_sc_bold"
        android:text="@string/skip"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.935" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="212dp"
        android:layout_height="55dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/amatica_sc_bold"
        android:text="@string/next"
        android:textColor="#000000"
        android:textSize="24sp"
        app:cornerRadius="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.919"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.935" />

    <ImageView
        android:id="@+id/confused_image"
        android:layout_width="172dp"
        android:layout_height="172dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.172"
        app:srcCompat="@drawable/confused" />

    <Button
        android:id="@+id/confused_button"
        android:layout_width="143dp"
        android:layout_height="48dp"
        android:backgroundTint="#F6F5E7"
        android:fontFamily="@font/alkatra"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingTop="0.5dp"
        android:paddingRight="10dp"
        android:paddingBottom="2dp"
        android:text="@string/confused"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />


    <Button
        android:id="@+id/disgusted_button"
        android:layout_width="143dp"
        android:layout_height="48dp"
        android:layout_marginStart="332dp"
        android:backgroundTint="#393434"
        android:fontFamily="@font/alkatra"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingTop="0.5dp"
        android:paddingRight="10dp"
        android:paddingBottom="2dp"
        android:text="@string/disgusted"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

    <Button
        android:id="@+id/Angry_button"
        android:layout_width="143dp"
        android:layout_height="48dp"
        android:layout_marginEnd="328dp"
        android:backgroundTint="#393434"
        android:fontFamily="@font/alkatra"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingTop="0.5dp"
        android:paddingRight="10dp"
        android:paddingBottom="2dp"
        android:text="@string/angry"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

</androidx.constraintlayout.widget.ConstraintLayout>